home/dot_config/ags/windows/right_sidebar/RightSidebar.scss
@use "../../theme" as *;

window.RightSidebar {
  .sidebar {
    color: $fg1;
    background-color: $bg1;
    padding: 16px;
    margin: 8px;
    border: none;
    border-radius: 24px;
    box-shadow: 0px 0px 5px rgba(black, 0.7);

    .UserModule {
      background-color: $bg2;
      padding: 6px;
      border-radius: 12px;
      box-shadow: 0px 0px 5px rgba(black, 0.2);
      .UserImg {
        min-width: 36px;
        min-height: 32px;
        border-radius: 32px;
        background-position: center;
        background-size: cover;
        margin-right: 8px;
      }
      label {
        font-family: $font2;
        padding-right: 4px;
      }
      .Username {
        font-weight: 800;
        font-size: 16px;
      }
      .Uptime {
        font-weight: 700;
        color: rgba($fg1, 0.7);
        font-size: 12px;
      }
    }
    .Wifi,
    .Bluetooth,
    .doNotDisturb,
    .nightLight {
      transition-duration: 250ms;
      margin-top: 8px;
      border-radius: 20px;
      box-shadow: 0px 0px 5px 0px rgba(black, 0.5);
      .Icon {
        font-family: $font1;
        font-size: 24px;
        padding: 0 2px 0 18px;
      }
      .Description {
        font-family: $font2;
        padding-left: 12px;
        margin: 8px 0px;
        & label:first-child {
          font-weight: 700;
        }
        & label:last-child {
          font-weight: 500;
        }
      }
      .enabled,
      .disabled {
        padding: 2px 4px;
        border-radius: 20px;
        min-width: 180px;
      }
      .enabled {
        color: $bg1;
        background-color: $accent;
      }
      .disabled {
        color: rgba($fg1, 0.8);
        background-color: $bg2;
      }
    }

    .doNotDisturb .Icon {
      padding: 0 4px 0 16px;
    }
    .Wifi .Icon {
      padding: 0 8px 0 12px;
    }

    .MediaPlayer {
      margin-top: 16px;
      font-family: $font2;
      background-color: $bg2;
      border-radius: 16px;
      min-height: 120px;
      .Description {
        background: linear-gradient(to right, rgba(black, 0.8), rgba(black, 0.2));
        border-radius: 0.95rem;
        padding: 10px 0px 0px 12px;
        font-weight: 700;
        text-shadow: 2px 2px 3px rgba(black, 0.9);
        .Title {
          font-size: 18px;
          color: rgba($fg1, 0.9);
        }
        .Artist {
          color: rgba($fg1, 0.7);
        }
      }
      .Cover {
        min-height: 200px;
        border-radius: 16px;
        border-radius: 1rem;
        background-position: center;
        background-size: cover;
      }
      .Actions {
        font-family: $font1;
        font-size: 20px;
        border-radius: 0px 12px 12px 0px;
        padding: 0;
        button {
          background-color: transparent;
          padding: 0px 4px;
          margin: 6px;
          border-radius: 12px;
        }
      }
      scale {
        padding: 0;
        margin: 0.4rem 0;

        trough {
          min-height: 8px;
          background-color: $bg2;
          border-radius: 32px;
          box-shadow: 0px 0px 3px 0px rgba(black, 0.4) inset;
        }

        highlight {
          border-radius: 32px;
          box-shadow: 0px 0px 3px 0px rgba(black, 0.7);
        }

        slider {
          all: unset;
        }
      }

      .position {
        color: rgba($fg1, 0.7);
        padding: 0px 12px 8px 2px;
      }
    }

    .playersButtons {
      background-color: transparent;
      button {
        margin-top: 4px;
        margin-right: 4px;
        padding: 0 4px;
        &:last-child {
          margin-right: 0;
        }
      }
      .enabled {
        background-color: rgba($accent, 0.4);
      }
      .disabled {
        background-color: transparent;
      }
    }

    .NotificationList {
      margin-top: 16px;
      border-radius: 16px;
      background-color: $bg2;
      transition-duration: 500ms;
      box-shadow: 0px 0px 5px rgba(black, 0.2);
      viewport {
        border: none;
      }
      eventbox.Notification > box {
        margin: 0.5rem 0.5rem 0 0.5rem;
        box-shadow: none;
      }
      .noNotifications {
        color: rgba($fg1, 0.8);
        font-size: 20px;
        font-weight: 700;
        margin-bottom: 48px;
        .Icon {
          font-size: 48px;
        }
      }
      .Title {
        font-family: $font2;
        font-weight: 600;
        font-size: 18px;
        margin: 8px 0px 0px 16px;
      }
      .dismissAll {
        color: $fg1;
        font-family: $font2;
        font-size: 14px;
        background-color: $bg1;
        border-radius: 10px;
        margin: 8px 8px 0px 0px;
        padding: 2px 8px;
        transition-duration: 250ms;
        &:hover {
          color: $bg1;
          background-color: $error;
        }
      }
    }
    .SidebarPanelsButtons {
      margin: 6px 4px;
      button {
        font-weight: 700;
        padding: 0px 8px;
        margin: 0px 4px;
        transition-duration: 250ms;
      }
      .enabled {
        color: $bg1;
        background-color: $accent;
      }
      .disabled {
        color: $fg1;
        background-color: $bg2;
      }
    }
    .SidebarBluetoothPanel,
    .SidebarWifiPanel {
      background-color: $bg2;
      border-radius: 16px;
      padding: 4px 8px 8px 8px;
      margin-top: 8px;
      switch:checked {
        background-color: $accent;
        border: 2px solid transparent;
      }
      switch {
        background-color: $bg1;
        border: 2px solid $fg1;
      }
      .Title {
        font-weight: 700;
        font-size: 18px;
        padding-left: 8px;
      }
      .Item {
        button {
          background-color: transparent;
          padding: 4px 3px 4px 1px;
          color: rgba($fg1, 0.8);
        }
      }
      .ItemList {
        background-color: $bg1;
        border-radius: 16px;
        padding: 8px;
        margin-top: 4px;
      }
    }

    .SidebarBluetoothPanel {
      .Item {
        icon {
          font-size: 24px;
          padding-right: 8px;
        }
        .Name,
        .Battery,
        .Status {
          font-weight: 600;
        }
        .Status {
          color: rgba($fg1, 0.8);
        }
      }
    }

    .SidebarWifiPanel {
      .Item {
        font-weight: 600;
        padding-left: 4px;
        .icon {
          font-size: 24px;
          padding-right: 16px;
        }
        .ssid {
          font-weight: 700;
        }
        .status {
          color: rgba($fg1, 0.8);
        }
      }
    }
    .sidebarActions {
      $radius: 18px;
      border-radius: $radius;
      font-size: 20px;
      padding: 0px;
      & button {
        padding: 0px 8px;
        border-radius: $radius;
        & label {
          background-color: transparent;
        }
        &:hover {
          color: $bg1;
        }
      }
      .lock,
      .hibernate,
      .poweroff {
        box-shadow: 0px 0px 4px 0px rgba(black, 0.3);
        margin-left: 8px;
        border-radius: $radius;
        font-size: 22px;
      }
      .poweroff {
        font-size: 28px;
        & button:hover {
          background-color: $error;
        }
      }
      .hibernate {
        font-size: 26px;
        & button:hover {
          background-color: #957fb8;
        }
      }
      .lock button:hover {
        background-color: #6a9589;
      }
    }
  }
}

